# docker-simple-manager

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  README_en.md  RELEASING.md  RELEASING_ru.md  pyinstaller.spec  pyproject.toml  setup_dev.sh
.github/workflows/: ci.yml
docker_simple_manager.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
docs/: 00_documentation_summary.md  01_technical_specification.md  02_settings_system_architecture.md  03_ui_ux_prototypes.md  04_ai_agent_prompt.md  05_development_checklist.md  06_project_architecture.md  07_implementation_overview.md
docs/examples/: SETTINGS_API.md  TESTING.md  connections.json
packaging/: docker-simple-manager.desktop
packaging/debian/: control
src/: __init__.py  app.py  faq_en.md  faq_ru.md  main.py
src/connections/: __init__.py  docker_client.py  manager.py  models.py
src/docker_api/: __init__.py  builds.py  client.py  containers.py  data_provider.py  exceptions.py  images.py  models.py  volumes.py
src/i18n/: __init__.py  translator.py
src/i18n/strings/: __init__.py  en.json  ru.json
src/projects/: __init__.py  executor.py  manager.py  models.py
src/settings/: __init__.py  exceptions.py  groups.py  migration.py  observers.py  registry.py  schemas.py  validators.py
src/ui/: __init__.py  main_window.py
src/ui/dialogs/: __init__.py  about.py  connections.py  container_console.py  container_details.py  help.py  logs.py  projects.py  settings.py
src/ui/resources/: __init__.py
src/ui/styles/: dark_theme.qss  light_theme.qss  theme_manager.py
src/ui/tabs/: __init__.py
src/ui/widgets/: footer.py  tables.py
src/utils/: __init__.py  helpers.py  logger.py  paths.py  system_metrics.py
tests/: __init__.py  test_main.py
tests/test_connections/: __init__.py  test_manager.py  test_models.py
tests/test_docker_api/: __init__.py  test_data_provider.py  test_operations.py
tests/test_projects/: __init__.py  test_manager.py
tests/test_settings/: __init__.py  test_exceptions.py  test_groups.py  test_migration.py  test_observers.py  test_registry.py  test_validators.py
tests/test_ui/: __init__.py
tests/test_utils/: __init__.py  test_helpers.py  test_logger.py
