[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "docker-simple-manager"
version = "0.1.0"
description = "Cross-platform desktop application for managing Docker resources."
readme = "README.md"
requires-python = ">=3.13"
authors = [
  { name = "Docker Simple Manager Team", email = "support@dsmanager.local" },
]
license = { text = "MIT" }
keywords = ["docker", "pyside6", "desktop", "manager"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.13",
  "License :: OSI Approved :: MIT License",
  "Operating System :: MacOS",
  "Operating System :: POSIX :: Linux",
  "Topic :: System :: Systems Administration",
  "Topic :: Utilities",
]
dependencies = [
  "PySide6>=6.7",
  "docker>=7.0",
  "paramiko>=3.4",
  "pydantic>=2.6",
  "python-dotenv>=1.0",
  "pexpect>=4.9",
  "psutil>=7.1.3",
]

[project.optional-dependencies]
dev = [
  "black>=24.3",
  "flake8>=7.0",
  "mypy>=1.8",
  "pytest>=8.1",
  "pytest-cov>=5.0",
  "pyinstaller>=6.5",
  "types-psutil>=5.9",
  "types-pexpect>=4.8",
  "types-docker>=7.0",
]

[project.urls]
homepage = "https://github.com/dsmanager/docker-simple-manager"
repository = "https://github.com/dsmanager/docker-simple-manager"
issues = "https://github.com/dsmanager/docker-simple-manager/issues"

[project.scripts]
docker-simple-manager = "src.main:main"
# dsm = "src.main:main"

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*", "docs", "tmp"]

[tool.black]
line-length = 100
target-version = ["py313"]

[tool.pytest.ini_options]
addopts = "-ra --cov=src --cov-report=term-missing"
testpaths = ["tests"]
filterwarnings = ["error"]

[tool.mypy]
python_version = "3.13"
warn_unused_configs = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
show_error_codes = true
strict = true
packages = ["src"]

[tool.flake8]
max-line-length = 100
ignore = ["E203", "W503"]
exclude = [
  "__pycache__",
  "build",
  "dist",
  "tmp",
  "tests",
]

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.uv]
managed = true
